--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,13 @@
   <!-- Main Js Start Here -->
   <script src="assets/js/main.js"></script>
   <!--Start of Tawk.to Script-->
+  <script src="assets/choices.js"></script>
   <script type="text/javascript">
+    const choices = new Choices('[data-trigger]',
+      {
+        searchEnabled: false,
+        itemSelectText: '',
+      });
     var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
     (function () {
       var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
